# SimpleRayTracer

./: .gitignore  CMakeLists.txt  README.md  README.ru.md  convert.py
include/: Camera.h  Camera.hpp  Hittable.hpp  Lambertian.hpp  Light.h  Material.hpp  Plane.h  Ray.h  Ray.hpp  Render.hpp  Scene.h  Shape.h  Sphere.h  Sphere.hpp  Vec3.h  Vec3.hpp  World.hpp  utils.hpp
inline/: Ray.ipp  Vec3.ipp
src/: Camera.cpp  Lambertian.cpp  Light.cpp  Plane.cpp  Ray.cpp  Render.cpp  Scene.cpp  Sphere.cpp  Vec3.cpp  World.cpp  main.cpp
